[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/email.gd" type="Script" id=1]
[ext_resource path="res://img/Fundo-Celular.png" type="Texture" id=2]
[ext_resource path="res://Celular/celular 18.png" type="Texture" id=3]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://img/amelia_rosto.png" type="Texture" id=5]
[ext_resource path="res://img/NPCS/Rafael(NPC)-Rosto.png" type="Texture" id=6]
[ext_resource path="res://img/NPCS/Jeff(NPC)-Rosto.png" type="Texture" id=7]
[ext_resource path="res://img/gui_rosto.png" type="Texture" id=8]
[ext_resource path="res://img/doutorGomes.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 4 )

[node name="email" type="Node2D"]
script = ExtResource( 1 )

[node name="Fundo-Celular" type="Sprite" parent="."]
position = Vector2( 318, 186 )
scale = Vector2( 0.35625, 0.366667 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 229.0
margin_top = 33.0
margin_right = 391.0
margin_bottom = 293.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Celular18" type="Sprite" parent="."]
position = Vector2( 291, 221 )
scale = Vector2( 0.508, 0.508 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="."]
margin_left = 296.0
margin_top = 298.0
margin_right = 324.0
margin_bottom = 327.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 236.0
margin_top = 111.0
margin_right = 388.0
margin_bottom = 144.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Button2"]
margin_left = 8.0
margin_top = 2.0
margin_right = 153.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="drGomes" type="Sprite" parent="Button2"]
position = Vector2( 76, 30 )
scale = Vector2( 0.270833, 0.194444 )
texture = ExtResource( 9 )

[node name="amelia" type="Sprite" parent="Button2"]
position = Vector2( 62, 29 )
scale = Vector2( 0.204427, 0.18316 )
texture = ExtResource( 5 )

[node name="guilherme" type="Sprite" parent="Button2"]
position = Vector2( 75, 31 )
scale = Vector2( 0.262153, 0.213542 )
texture = ExtResource( 8 )

[node name="rafael" type="Sprite" parent="Button2"]
position = Vector2( 67.0001, 31 )
scale = Vector2( 0.230903, 0.197917 )
texture = ExtResource( 6 )

[node name="jeff" type="Sprite" parent="Button2"]
position = Vector2( 76, 30 )
scale = Vector2( 0.270833, 0.194444 )
texture = ExtResource( 7 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
